--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "shad": "npx shadcn-ui@latest add"
   },
   "dependencies": {
+    "@radix-ui/react-alert-dialog": "^1.1.1",
     "@radix-ui/react-avatar": "^1.1.0",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
